# AiSH

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  actions-cleanup-report.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: apply_ai_run_routing_fix.py  apply_windows_updater_patch.py
.github/workflows/: agent-rustfmt.yml  agent-simplify-command-card.yml  apply-ai-run-routing-fix-v2.yml  apply-ai-run-routing-fix.yml  apply-command-card-fix.yml  ci.yml  dispatch-provider-v0.3.0.yml  kick-command-card-fix.yml  package.yml  provider-release.yml  refresh-icon-lock.yml  release-v0.2.2.yml  release-v0.3.0.yml  release-v0.3.1.yml  site-build-debug.yml  validate-0.3.0.yml  verify-v0.3.0-release.yml  verify-v0.3.1-release.yml  verify-v0.4.0.yml  verify-v0.4.1.yml  verify-v0.4.4.yml  verify-v043-release.yml  version-bump.yml  windows-updater-smoke.yml
.specify/memory/: constitution.md
apps/desktop/: index.html
apps/provider-shell/: Cargo.toml  build.rs
apps/provider-shell/src/: logging.rs  main.rs  main_setup.rs  runtime_bootstrap.rs  setup.rs  updater.rs  windows_brand.rs  windows_register.ps1  windows_uninstall.ps1
apps/provider-shell/src/updater/: lifecycle.rs  windows_apply.rs
apps/site/: build.mjs  index.html  main.js  package-lock.json  package.json  vite.config.mjs
assets/: README.md  manifest.json
crates/aish-provider/: Cargo.toml
crates/aish-provider/src/: lib.rs
docker/: Dockerfile  start-desktop.sh  start-provider.sh
docs/: AI_RUN_UX.md  ARCHITECTURE.md  BRAND.md  BUILD_ROADMAP.md  DEVELOPMENT.md  DOCKER_TESTING.md  PACKAGING_AND_PROVIDER.md  PRODUCT_PLAN.md  PROJECT_INSPECTION.md  PROVIDER_LAYER.md  RELEASES.md  ROADMAP.md  TROUBLESHOOTING.md  release-checklist.md  release-v0.3.0-status.json  release-v0.3.1-status.json  release-v0.4.0-status.json  release-v0.4.1-status.json  release-v0.4.2-status.json  release-v0.4.3-status.json  release-v0.4.4-status.json  security-and-system-review.md  site-build-debug.txt
scripts/: build-site.mjs  install.ps1
tools/: apply-v042.py
(+92 files in other folders)
