[package]
name = "aish-provider-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[[bin]]
name = "aish"
path = "src/main_setup.rs"

[dependencies]
aish-ai = { path = "../../crates/aish-ai" }
aish-core = { path = "../../crates/aish-core" }
aish-safety = { path = "../../crates/aish-safety" }
serde.workspace = true
serde_json.workspace = true
ureq = "2"
