[package]
name = "aish-provider-shell"
version = "0.4.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[[bin]]
name = "aish"
path = "src/main.rs"

[dependencies]
aish-ai = { path = "../../crates/aish-ai" }
aish-core = { path = "../../crates/aish-core" }
aish-context = { path = "../../crates/aish-context" }
aish-completion = { path = "../../crates/aish-completion" }
aish-provider = { path = "../../crates/aish-provider" }
aish-safety = { path = "../../crates/aish-safety" }
aish-logging = { path = "../../crates/aish-logging" }
serde.workspace = true
serde_json.workspace = true
ureq = "2"

[build-dependencies]
winres = "0.1.12"
