[package]
name = "aish-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
aish-ai = { path = "../aish-ai" }
aish-core = { path = "../aish-core" }
aish-safety = { path = "../aish-safety" }
